@@ -7,8 +7,10 @@ AUX queuemetrics.socket 126 SHA256 a04679c03f2cd417cd03e6e6d233cdc749a4adc86cb04
 AUX server.xml 1628 SHA256 6efaee54a0a4246a82e835ff94ec37906f0846b517bf066d0b728ce74d08298a SHA512 6e5134dbb9e616c01dd2f827002bd947875234d19bce8c320e0f279d56f46062ce77f0ade56cd29e87cfbba85fb02d1c0983c5e21b8621b1544d383bd53df1cc WHIRLPOOL 0ac36562cf9cd2b7f55f2293fbfed6a3f89f24c5572ae36ca59769ea90e4cdf2ac374dd9d7c8f71aeb7dbfe734c762fdf1bc1bcd580186763ae3adeb8fb66fe3
 DIST QueueMetrics-19.10.5.tar.gz 16167427 SHA256 e6d37eacad25302d09db1cde9b60c6ace18254096fed60dc23fda7108548709e SHA512 76bc3641211a609cdb3944002e2658fa61f0e0d45239130bc2dc483271ce10606aa4cf73bf9905a88c170bc71e60524c4879f7d7d53cd02851b4d9f4eeb464e6 WHIRLPOOL 4024acf2d6c1a875672e44c1b9b3f9c5c37844dbc5cb34248bddf9e998923741e3243d87a0d1afc783f2315d08785919faebf46e79d87441ae3c0974118ae7ed
 DIST QueueMetrics-19.10.6.tar.gz 16167449 SHA256 b4a9b58086447c53bb728974dc29079957b46e1d82e07b8e365052d00eb947e9 SHA512 b6e39053e2d9369e92d6efdf5e636d35b25b32939a5fafeebc9aad00d478ba64b033cd56d4a11d25875a454134b45d9dd91464d6e93b9e67472f648b7b1dac40 WHIRLPOOL 7b1f35e4d8d9aa4c73301673ccec7070eb8ca20729daf3e2cd63d0d82ccc40eb96e5465cdba97a868661f0ef27a2d494b737170a0c401dac89a6190b99ecee4c
+DIST QueueMetrics-19.10.8.tar.gz 16189130 SHA256 5aaaeddd608f0561a9dd101ef61fd2aa88e8da60aeeb0565b6a9d8eb8484ca91 SHA512 35575273d62918dc22e877877eda0f1e9d7cc529633688186a81b994164e14484c0470bb5f72b9032de539cfe9f17be49078da81d7e235f36ef41188d6ba2a73 WHIRLPOOL 2781fae214ddda4159a7281a9325e32ace7a1f875cef0d3354ac45d4d648e4c5fdbd473c2320643a60577b0c30d29621d8b99e5febbb086be4585db2c58b000a
 DIST apache-tomcat-8.5.50.tar.gz 10305939 SHA256 ea762293e889f85d40f5ec14ac4474e133a379522d623f4ba5993da6260bf06e SHA512 ffca86027d298ba107c7d01c779318c05b61ba48767cc5967ee6ce5a88271bb6ec8eed60708d45453f30eeedddcaedd1a369d6df1b49eea2cd14fa40832cfb90 WHIRLPOOL 9c7874dcbfac53e6b9ccacee8bcb907c845888079d90147985238a2aa73e2f149d6eacbefc192e97864e81705c4117fc52b017954063db9d356565d1f0017d77
 EBUILD queuemetrics-19.10.5.ebuild 1983 SHA256 6088b69f3d969215c37775e6bce9aac52fa6db4e908a809f333ea11fff4f22a6 SHA512 045d4295c316c48cc2024bef6291024163862245464c872814b591fe68a3c0a28f8a9fc9cee6b0c4365252c523dd70263844aeed94c32837b33d69db831f85f3 WHIRLPOOL 9ba7e2879329e2a592e58c54eedf6245630f4269cd60a781929676e92754fb48117ff9d190deb945bb513e083d4fc54bdf3bbcfaab17d1c47eca6413e7055e95
 EBUILD queuemetrics-19.10.6.ebuild 1983 SHA256 a49ef530748165d176808647aab94abab0bf4016fe673923ae9795c2db978881 SHA512 2ff5123b186040e071723c77d7db6c65a3be27aa351b7e0c4f55cd68af623d46792a84a3d391e370b89e246809571a988cfe5d02599f473062963a2ce9291ddc WHIRLPOOL 2d618346c2f6943530eb1dfbf29d6022a00a5f2e89ba96730df76a1470fb5043495c51ea917958c2262253f46d8f46af17d28114a1cbe3f528cc04eadaa16326
-MISC ChangeLog 3486 SHA256 188fa887ae17139c9f498c87be2cc83a77249add9ef036466845d5297cec2a3e SHA512 cb2398643961130bf9bdedd26fdf98ddca3c67c84e015411742f19ed1aa8b60b163fef7763747fb6fd1c6e73f85b9365bd5d4005e560a4fea39048b2cb162486 WHIRLPOOL 3f6752e617dc493be374d46335706c0814fe672c0e39bffe680eba4cb288203a9eccab25efd43e35049b8d9e0ea61040c1eccf0e9e6d51b9e52550ebb902762b
+EBUILD queuemetrics-19.10.8.ebuild 1983 SHA256 a49ef530748165d176808647aab94abab0bf4016fe673923ae9795c2db978881 SHA512 2ff5123b186040e071723c77d7db6c65a3be27aa351b7e0c4f55cd68af623d46792a84a3d391e370b89e246809571a988cfe5d02599f473062963a2ce9291ddc WHIRLPOOL 2d618346c2f6943530eb1dfbf29d6022a00a5f2e89ba96730df76a1470fb5043495c51ea917958c2262253f46d8f46af17d28114a1cbe3f528cc04eadaa16326
+MISC ChangeLog 3655 SHA256 4d076b32114e2b20aa1e71f07ea15689e181971f486d250dfdad88701a2b219a SHA512 2b69dea4069f6f9613ff524eef7dcbbd86a4e4f05f60a6ae7a15b41e486945317509597871de9256de1fc31e63f65e47d364d24dd60ed64d8650715724af13ed WHIRLPOOL 6a2b0221d6b1dfc6eaeeec11b20a05dbac80b3449dc9d5160b4f33ae39c79fc0342f65e1e0efcc0e167021c85aeacda63441f10796953aea903124f217e787c7
 MISC metadata.xml 389 SHA256 3d4f1ca7609f74c3bddef49ce0d31edb1b23cd221ee6abe001abecaac65ec87e SHA512 52df615f053daaa05ae886a8c32149d4b714e7cb8e03804fc39b16160dd3f1381645c9d5a15ce113e875234fbecbf005879dd57bbb418eddfcc901354da498f2 WHIRLPOOL 506f357243b5b1bb8e427132b19b86865932dba8344c895debb1074fa301f308850ced982a2eb29c5becebfa788b5ed7465fd285e2bf53bae95a8d680fe8cc20
