@@ -1,3 +1,8 @@
+*queuemetrics-19.10.8 (05 Feb 2020)
+
+  05 Feb 2020; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.8.ebuild:
+  app-metrics/queuemetrics: version bump to 19.10.8
+
 *queuemetrics-19.10.6 (16 Jan 2020)
 
   16 Jan 2020; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.6.ebuild:
